--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <title>lorenzozanca.com</title>
   <script src="https://cdn.jsdelivr.net/npm/animejs@3.1.0/lib/anime.min.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
   <div>
@@ -64,38 +65,6 @@
         display: inline-block;
       }
   </style>
-  
-  <script>
-    
-import Letterize from "https://cdn.skypack.dev/letterizejs@2.0.0";
-const test = new Letterize({
-  targets: ".animate-me"
-});
-
-const animation = anime.timeline({
-  targets: test.listAll,
-  delay: anime.stagger(100, {
-    grid: [test.list[0].length, test.list.length],
-    from: "center"
-  }),
-  loop: true
-});
-
-animation
-  .add({
-    scale: 0.5
-  })
-  .add({
-    letterSpacing: "10px"
-  })
-  .add({
-    scale: 1
-  })
-  .add({
-    letterSpacing: "6px"
-  });
-
-  </script>
   
  </body>
 </html>
