--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>lorenzozanca.com</title>
   <script src="https://cdn.jsdelivr.net/npm/animejs@3.1.0/lib/anime.min.js"></script>
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </head>
 <body>
   <div>
