--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
         <div class="animate-me">
         lorenzozanca.com
       </div>
+        <div class="animate-me">
+        lorenzozanca.com
+      </div>
     </div>
   
   <style>
     
     body {
-        background-color: #222;
+        background-color: #111;
         color: #fff;
         font-weight: 400;
         font-size: 2vw;
@@ -53,7 +56,7 @@
         justify-content: center;
         text-align: center;
         text-transform: uppercase;
-        font-family: "Khula", sans-serif;
+        font-family: "Poppins", sans-serif;
         height: 100vh;
         box-sizing: border-box;
         letter-spacing: 6px;
