--- a/hyper/wp-content/themes/astra/index.html
+++ b/hyper/wp-content/themes/astra/index.html
@@ -87,24 +87,26 @@
         <!--	3d BG -->
     </section>
 
+    <div style="position:fixed; padding-left: 30px; padding-top: 30px; z-index: 1000; mix-blend-mode: exclusion;" id="loghetto">
+        <a href="https://hyperlab.xyz">
+            <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_394_382)">
+                    <path
+                        d="M4.19095 33.5337L6.58884 35.9316L17.2799 33.0742L26.0248 29.3859L31.5047 36.6465L39.5772 44.719L42.8724 43.8209L43.7763 40.6024L35.7416 32.5677L28.3809 27.0365L32.0641 18.3674L34.9485 7.60559L32.5472 5.20434L29.2791 6.06708L26.3728 16.8054L25.188 26.2175L16.095 27.3574L5.13032 30.2124L4.19095 33.5337Z"
+                        fill="white" />
+                </g>
+                <defs>
+                    <clipPath id="clip0_394_382">
+                        <rect width="50" height="50" fill="white" />
+                    </clipPath>
+                </defs>
+            </svg>
+        </a>
+    </div>
+
     <section class="head">
 
         <div style="position: absolute; z-index: 1; height: 100vh;">
-
-            <div style="padding-left: 30px; padding-top: 30px;" id="loghetto">
-                <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g clip-path="url(#clip0_394_382)">
-                        <path
-                            d="M4.19095 33.5337L6.58884 35.9316L17.2799 33.0742L26.0248 29.3859L31.5047 36.6465L39.5772 44.719L42.8724 43.8209L43.7763 40.6024L35.7416 32.5677L28.3809 27.0365L32.0641 18.3674L34.9485 7.60559L32.5472 5.20434L29.2791 6.06708L26.3728 16.8054L25.188 26.2175L16.095 27.3574L5.13032 30.2124L4.19095 33.5337Z"
-                            fill="white" />
-                    </g>
-                    <defs>
-                        <clipPath id="clip0_394_382">
-                            <rect width="50" height="50" fill="white" />
-                        </clipPath>
-                    </defs>
-                </svg>
-            </div>
     
             <div class="intestazione">
                 <svg width="95vw" height="339" viewBox="0 0 1677 339" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -202,7 +204,7 @@
                         </p>
                         <span>
                             <!-- <img src="media/compresso.gif" alt="Virtual Products"/> -->
-                            <video src="../../../media/loop/loop2.mp4" autoplay loop muted alt="Virtual Products"></video>
+                            <video src="../../../media/loop/loop3.mp4" autoplay loop muted alt="Virtual Products"></video>
                         </span>
                     </a>
                 </li>
@@ -213,7 +215,7 @@
                         </p>
                         <span>
                             <!-- <img src="media/compresso.gif" alt="Experimentation and Research"/> -->
-                            <video src="../../../media/loop/loop3.mp4" autoplay loop muted alt="Experimentation and Research"></video>
+                            <video src="../../../media/loop/loop2.mp4" autoplay loop muted alt="Experimentation and Research"></video>
                         </span>
                     </a>
                 </li>
@@ -273,12 +275,19 @@
         <div class="destra">
             <h2>Animations</h2>
             <p>
-                Photorealistic 3d animation can increase the communications possibilities of any presentation, adding value to many projects.
-                Today the latest technology make easier creating stunning animations with cinematographic quality.
+                Photorealistic 3d animation can increase the communications possibilities of any projects.
+                Today the latest technologies make it possible to create amazing animations with cinematographic quality.
             </p>
         </div>
 
-        <section class='demo-gallery'>
+        <div class="videoContainer">
+            <video muted loop class="videoAuto" width="854" height="480" controls="false">
+                <source src="../../../media/home/03.mp4" type="video/mp4">                                 
+                Your browser does not support the video tag.
+            </video> 
+        </div>
+
+        <!-- <section class='demo-gallery'>
             <ul class='wrapper'>
                 <li>
                     <video muted loop class="videoAuto" width="854" height="480" controls="false">
@@ -299,7 +308,7 @@
                     </video> 
                 </li>
             </ul>
-        </section>
+        </section> -->
 
     </section>
     <section class="other">
@@ -309,13 +318,14 @@
         <div class="destra">
             <h2>Augmented experiences</h2>
             <p>
-                from VR to Virtual Photo Shooting, Viewers and 3D Configurators
+                Virtual experiences take exploration and communication to a new immersive level. 
+                With the possibility of enrich them with pop-up infographics, floorplans, videos, links, they represent a very complete and smart way to describe many type of projects. 
             </p>
         </div>
 
         <div class="videoContainer">
             <video muted loop class="videoAuto" width="854" height="480" controls="false">
-                <source src="../../../media/home/03.mp4" type="video/mp4">                                 
+                <source src="../../../media/home/04.mp4" type="video/mp4">                                 
                 Your browser does not support the video tag.
             </video> 
         </div>
@@ -359,7 +369,7 @@
             </div>
             <div class="column c2">
                 <nav>
-                    <a href="https://hyperlab.xyz/architecture">/DIGITAL ARCHITECTURE</a> <br>
+                    <a href="https://hyperlab.xyz/architecture">/VIRTUAL ARCHITECTURE</a> <br>
                     <a href="https://hypercreativehub.com/virtual-products">/VIRTUAL PRODUCTS</a> <br>
                     <a href="https://hypercreativehub.com/experimentation">/EXPERIMENTATION AND RESEARCH</a> <br>
                     <a href="https://hyperlab.xyz/about-us">About Us</a> <br>
