--- a/liv/index.html
+++ b/liv/index.html
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <video style="z-index: 1;" src="media/video/notext.mp4" id="intro" type="video/mp4" preload="auto" muted plays-inline=""></video>
+    <video style="z-index: 1;" src="media/video/notext.mp4" id="intro" type="video/mp4" preload="auto" muted playsinline></video>
 
     <div style="position: absolute; bottom: 5vh; right: 5vw; z-index: 10; display: flex;">
             <input style="right: 2vw;" class="custom-btn btn" readonly="readonly" type="submit" value="Watch Video" onClick="playAudio();">
@@ -74,7 +74,7 @@
 
 <div id="background-container" class="background-container">
     <div id="video-container" class="video-container">
-        <video src="media/video/output.mp4" type="video/mp4" id="bgVideo" preload="auto" muted="" plays-inline=""></video>
+        <video src="media/video/output.mp4" type="video/mp4" id="bgVideo" preload="auto" muted="" playsinline></video>
     </div>
 </div>
 
@@ -144,7 +144,7 @@
 
 <section class="secure">
     <div class="video-container">
-        <video src="media/video/secure.mp4" type="video/mp4" preload="auto" autoplay loop muted plays-inline=""></video>
+        <video src="media/video/secure.mp4" type="video/mp4" preload="auto" autoplay loop muted playsinline></video>
     </div>
     <p>In an ultra <span style="color: #ED1E40;">secure</span> <br>
         and <span style="color: #ED1E40;">untraceable</span> manner</p>
