--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 			
 			<ul>
         <li><a href="https://lorenzozanca.com/">Portfolio</a></li>
-        <li><a href="https://www.linkedin.com/in/lorenzo-zanchetta-design/">Linkedin</a></li>
+        <li><a href="https://www.linkedin.com/in/lorenzozanca">Linkedin</a></li>
+	<li><a href="https://lorenzozanca.github.io/liv/">LIV</a></li>
 			</ul>
 		</div>
   
