--- a/liv/cookies/index.html
+++ b/liv/cookies/index.html
@@ -8,6 +8,7 @@
 <link rel="icon" type="image/x-icon" href="../media/favicon.png">
 
 <link rel="stylesheet" href="../script/style.css">
+<link rel="stylesheet" href="../script/style-mobile.css">
 
 <title>Liv | Cookies Policy</title>
 
