--- a/liv/cookies/index.html
+++ b/liv/cookies/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 
 <head>
+<meta charset="utf-8">
+<meta content="width=device-width, initial-scale=1" name="viewport">
+<link href="../media/favicon.png" rel="shortcut icon" type="image/x-icon">
+<link href="../media/app.png" rel="apple-touch-icon">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-<link rel="icon" type="image/x-icon" href="../media/favicon.png">
-
 <link rel="stylesheet" href="../script/style.css">
 <link rel="stylesheet" href="../script/style-mobile.css">
 
@@ -31,7 +33,7 @@ $(function () {
 <div data-include="header"></div>
 
 <section class="imagine">
-    <p style="font-size:2em;">
+    <p style="font-size:1.5em; width: 100vw;">
 This website also includes certain components transmitted by Google Analytics, a web traffic analysis service provided by Google, Inc. ( "Google"). 
 Again it comes to third-party cookies collected and managed anonymously to monitor and improve the performance of the host site (cookies performance). 
 Google Analytics uses "cookies" to collect and analyze anonymous information about site usage behavior Liv (including your IP address). 
