--- a/liv/home/index.html
+++ b/liv/home/index.html
@@ -100,7 +100,7 @@ $(function () {
     <p>Imagine if we could provide you <span style="color: #ED1E40;">preventive healthcare</span> analyzing the entire <span style="color: #ED1E40;">body</span></p>
 </section>
 
-<div data-include="scanning"></div>
+<div style=" scroll-snap-align: start; scroll-snap-stop: normal;" data-include="scanning"></div>
 
 <!-- <div style="z-index: 10;" data-include="scan"></div> -->
 
