--- a/liv/home/index.html
+++ b/liv/home/index.html
@@ -30,7 +30,7 @@ $(function () {
 <body onload="start();">
 
 <div data-include="cookies"></div>
-<div data-include="headerHome"></div>
+<div data-include="header"></div>
 
 <div class="video-container">
     <div style="position: absolute; z-index: 5;">
@@ -42,7 +42,7 @@ $(function () {
     <video style="z-index: 1;" src="../media/video/Header.mp4" id="intro" type="video/mp4" autoplay muted="muted" playsinline="" controlslist="nodownload"></video>
 
     <!-- <div style="position: absolute; bottom: 5vh; right: 2vw; z-index: 10; display: flex;">
-        <input class="custom-btn btn" readonly="readonly" type="submit" value="Watch Video" onClick="playAudio();">
+        <input class="normal-btn btn" readonly="readonly" type="submit" value="Watch Video" onClick="playAudio();">
     </div> -->
 </div>
 
@@ -50,27 +50,7 @@ $(function () {
     <p>Imagine a future where your <span style="color: #ED1E40;">digital footprint</span> wherever you are is turned into health data</p>
 </section>
 
-<div id="background-container" class="background-container">
-    <div id="video-container" class="video-container">
-        <video src="../media/video/output.mp4" type="video/mp4" id="bgVideo" autoplay muted="muted" playsinline="" controlslist="nodownload"></video>
-    </div>
-</div>
-
-<div id="scroll-container" class="scroll-container">
-    <section id="step0" class="step">
-        <!-- <div><h3>A</h3></div> -->
-    </section>
-    <section id="step1" class="step">
-        <div><h3>Where every <span style="color: #ED1E40;">data source</span> around you</h3></div>
-    </section>
-    <section id="step2" class="step">
-        <div><h3>could be <span style="color: #ED1E40;">tracked</span></h3></div>
-    </section>
-    <section id="step3" class="step">
-        <div><h3>to be analyzed, <span style="color: #ED1E40;">for you</span></h3></div>
-    </section>
-
-</div>
+<div data-include="scrolling" style="width: 100vw;"></div>
 
 <section id="comparison" class="comparisonSection">
     <div class="comparisonImage beforeImage">
@@ -96,7 +76,7 @@ $(function () {
         and <span style="color: #ED1E40;">untraceable</span> manner</p>
 </section>
 
-<section class="imagine" style="margin-top: 30vh;">
+<section class="imagine" style="padding-top: 30vh;">
     <p>Imagine if we could provide you <span style="color: #ED1E40;">preventive healthcare</span> analyzing the entire <span style="color: #ED1E40;">body</span></p>
 </section>
 
@@ -115,7 +95,7 @@ $(function () {
 <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js"></script>
 
 <script src="../script/video.js"></script>
-<script src="../script/scrolling.js"></script>
+<!-- <script src="../script/scrolling.js"></script> -->
 <script src="../script/comparison.js"></script>
 
 </body>
