--- a/liv/home/index.html
+++ b/liv/home/index.html
@@ -24,7 +24,6 @@
             })
         })
     </script>
-
 </head>
 
 <body>
@@ -36,9 +35,10 @@
     <div id="description"></div>
 
     <!-- <section id="section1" data-include="landing"></section> -->
-
     <section id="section1" data-include="scanning"></section>
-
+    <div class="container">
+        Imagine the future of health
+    </div>
     <section id="section2" data-include="scrolling"></section>
 
     <section id="section3" data-include="comparison"></section>
