--- a/liv/home/index.html
+++ b/liv/home/index.html
@@ -36,9 +36,9 @@
 
     <!-- <section id="section1" data-include="landing"></section> -->
     <section id="section1" data-include="scanning"></section>
-    <div class="container">
-        Imagine the future of health
-    </div>
+
+    <div class="container"> Imagine the future of health </div>
+    
     <section id="section2" data-include="scrolling"></section>
 
     <section id="section3" data-include="comparison"></section>
@@ -56,7 +56,22 @@
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js"></script>
 
-    <script src="../script/narration.js"></script>
+    <script>
+
+        const containers = gsap.utils.toArray(".container");
+        containers.forEach((container) => {
+        gsap.to(container, {
+            autoAlpha: 1,
+            ease: "power1.in",
+            scrollTrigger: {
+            trigger: container,
+            pin: true,
+            scrub: true
+            }
+        });
+        });
+
+    </script>
 
 </body>
 
