--- a/liv/home/index.html
+++ b/liv/home/index.html
@@ -32,13 +32,13 @@
     <div data-include="cookies"></div>
     <div data-include="header"></div>
 
-    <div id="description"></div>
-
     <!-- <section id="section1" data-include="landing"></section> -->
 
     <section id="section1" data-include="scanning"></section>
 
     <section id="section2" data-include="scrolling"></section>
+
+    <!-- <section data-include="fermo"></section> -->
 
     <section id="section3" data-include="comparison"></section>
 
