--- a/liv/home/index.html
+++ b/liv/home/index.html
@@ -34,17 +34,19 @@
 
     <!-- <section id="section1" data-include="landing"></section> -->
 
-    <section id="section1" data-include="scanning"></section>
+    <section data-include="scanning"></section>
 
-    <section id="section2" data-include="scrolling"></section>
+    <section data-include="scrolling"></section>
 
     <!-- <section data-include="fermo"></section> -->
 
-    <section id="section3" data-include="comparison"></section>
+    <section data-include="comparison"></section>
 
-    <section id="section4" data-include="lines"></section>
+    <section data-include="lines"></section>
 
-    <section id="section5" data-include="every"></section>
+    <section data-include="closing"></section>
+
+    <section data-include="every"></section>
 
     <section id="white"></section>
 
