--- a/liv/about/index.html
+++ b/liv/about/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+<title>Liv | About</title>
+<script src="../script/jquery.min.js"></script>
+
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1" name="viewport">
 <link href="../media/favicon.png" rel="shortcut icon" type="image/x-icon">
@@ -12,9 +15,6 @@
 <link rel="stylesheet" href="../script/style.css">
 <link rel="stylesheet" href="../script/style-mobile.css">
 
-<title>Liv | About</title>
-
-<script src="../script/jquery.min.js"></script>
 <script>
 $(function () {
   var includes = $('[data-include]')
@@ -28,142 +28,39 @@ $(function () {
 
 <body>
 
-<div data-include="cookies"></div>
-<div data-include="header"></div>
+  <div data-include="cookies"></div>
+  <div data-include="header"></div>
 
-<section class="black">
-    <h1>
-        By levering state-of-the-art science and technology, our mission is to unlock the full human potential for each individual through health awareness and self-care.
-    </h1>
-    <!-- <h6>General</h6>
-    <p>‍This</p> -->
-</section>
+  <section data-include="home/landing"></section>
 
-<section class="imagine">
-  <img class="imgfull" src="../media/img/bg/sun.webp">
+  <section class="black">
+      <h1>
+          By levering state-of-the-art science and technology, our mission is to unlock the full human potential for each individual through health awareness and self-care.
+      </h1>
+      <!-- <h6>General</h6>
+      <p>‍This</p> -->
+  </section>
 
-  <p class="aboutme">We make health easy and accessible for all. we enable anyone, anywhere to assess their own health condition in real-time.</p>
-</section>
-
-<section class="imagine">
-  <img class="imgfull" src="../media/img/bg/field.webp">
-
-  <div class="aboutme whoprofile">
-    <img src="../media/img/about/Daniel.png" style="padding-bottom: 4vh; width: 18vw;">
-    <p>Daniel Dudas-Schwarz</p>
-    <p class="subtitle">CEO & Co-Founder</p>
-  </div>
-
-  <p class="aboutme whoami">"We make health easy and accessible for all. we enable anyone"</p>
-</section>
+  <div class="black">
+    <h2>
+        Mission
+    </h2>
+</div>
 
 <section class="imagine">
-  <img class="imgfull" src="../media/img/bg/fly.webp">
-
-  <p class="aboutme whoami">"We make health easy and accessible for all. we enable anyone"</p>
-
-  <div class="aboutme whoprofile">
-    <img src="../media/img/about/Sachin.png" style="padding-bottom: 4vh; width: 18vw;">
-    <p>Sachin Prathaban</p>
-    <p class="subtitle">CTO & Co-Founder</p>
-  </div>
-</section>
-
-<section class="imagine">
-  <img class="imgfull" src="../media/img/bg/bike.webp">
-
-  <div class="aboutme whoprofile">
-    <img src="../media/img/about/Max.png" style="padding-bottom: 4vh; width: 18vw;">
-    <p>Max Darski</p>
-    <p class="subtitle">CPO & Co-Founder</p>
-  </div>
-
-  <p class="aboutme whoami">"We make health easy and accessible for all. we enable anyone"</p>
-</section>
-
-<section class="centerme" style="padding-top: 25vh;">
-
-  <div class="aboutme guy">
-    <img src="../media/img/about/team/Sara.png">
-    <p>Sarah Prická</p>
-    <p class="subtitle">Marketing & SoMe Assistant</p>
-  </div>
-
-  <div class="aboutme guy">
-    <img src="../media/img/about/team/Nicklas.png">
-    <p>Nicklas Elsborg Jønsson</p>
-    <p class="subtitle">Business Developer</p>
-  </div>
-
-  <div class="aboutme guy">
-    <img src="../media/img/about/team/Resit.png">
-    <p>Resit Kadir</p>
-    <p class="subtitle">Data Scientist & ML Engineer</p>
-  </div>
-
-  <div class="aboutme guy">
-    <img src="../media/img/about/team/Luigi.png">
-    <p>Luigi Di Gennaro</p>
-    <p class="subtitle">Full Stack Designer</p>
-  </div>
-
-</section>
-<section class="centerme">
-
-  <div class="aboutme guy">
-    <img src="../media/img/about/team/Lorenzo.png">
-    <p>Lorenzo Zanchetta</p>
-    <p class="subtitle">UX/UI & Web Developer</p>
-  </div>
-
-  <div class="aboutme guy">
-    <img src="../media/img/about/team/Katarina.png">
-    <p>Katarina Michelova</p>
-    <p class="subtitle">Global Health Researcher</p>
-  </div>
-
-  <div class="aboutme guy">
-    <img src="../media/img/about/team/Alex.png">
-    <p>Alex Abades Grimes</p>
-    <p class="subtitle">Data Scientist & ML Engineer</p>
-  </div>
-
-  <div class="aboutme guy">
-    <img src="../media/img/about/team/Katarzyna.png">
-    <p>Katarzyna Król</p>
-    <p class="subtitle">Data Scientist & ML Engineer</p>
-  </div>
+    <img class="imgfull" src="../media/img/bg/sun.webp">
   
+    <p class="aboutme">We make health easy and accessible for all. we enable anyone, anywhere to assess their own health condition in real-time.</p>
 </section>
 
-<section class="imagine">
-  <div class="aboutme whoami">
-    <img src="../media/img/about/team/Lars.png" style="padding-bottom: 4vh; width: 18vw;">
-    <p>Lars Christensen</p>
-    <p class="subtitle">International Economist</p>
-  </div>
+  <section data-include="about/founders"></section>
 
-  <div class="aboutme whoami">
-    <img src="../media/img/about/team/Pinto.png" style="padding-bottom: 4vh; width: 18vw;">
-    <p>Keenan Pinto | MScEng</p>
-    <p class="subtitle">Strategic Advisor & Partner</p>
-  </div>
+  <section data-include="about/team"></section>
 
-  <div class="aboutme whoami">
-    <img src="../media/img/about/team/Perl.png" style="padding-bottom: 4vh; width: 18vw;">
-    <p>Dr. Leor Perl | MD</p>
-    <p class="subtitle">Medical Advisor</p>
-  </div>
+  <section data-include="about/contributors"></section>
 
-  <div class="aboutme whoami">
-    <img src="../media/img/about/team/Itay.png" style="padding-bottom: 4vh; width: 18vw;">
-    <p>Itay Cohen | MScEng</p>
-    <p class="subtitle">Tech & Hardware Advisor</p>
-  </div>
-</section>
-
-<div data-include="form"></div>
-<div data-include="footer"></div>
+  <div data-include="form"></div>
+  <div data-include="footer"></div>
 
 </body>
 
