--- a/liv/home/index.html
+++ b/liv/home/index.html
@@ -32,21 +32,21 @@
     <div data-include="cookies"></div>
     <div data-include="header"></div>
 
-    <!-- <section id="section1" data-include="landing"></section> -->
+    <!-- <section id="section1" data-include="home/landing"></section> -->
 
-    <section data-include="scanning"></section>
+    <section data-include="home/scanning"></section>
 
-    <section data-include="scrolling"></section>
+    <section data-include="home/scrolling"></section>
 
-    <!-- <section data-include="fermo"></section> -->
+    <!-- <section data-include="home/fermo"></section> -->
 
-    <section data-include="comparison"></section>
+    <section data-include="home/comparison"></section>
 
-    <section data-include="lines"></section>
+    <section data-include="home/lines"></section>
 
-    <section data-include="closing"></section>
+    <section data-include="home/closing"></section>
 
-    <section data-include="every"></section>
+    <section data-include="home/every"></section>
 
     <section id="white"></section>
 
