try video in everything

--- a/liv/home/index.html
+++ b/liv/home/index.html
@@ -36,11 +36,11 @@
 
     <section data-include="home/scanning"></section>
 
-    <section data-include="home/scrolling"></section>
+    <!-- <section data-include="home/scrolling"></section>
 
-    <!-- <section data-include="home/fermo"></section> -->
-
-    <section data-include="home/comparison"></section>
+    <section data-include="home/comparison"></section> -->
+    
+    <section data-include="home/newscroll"></section>
 
     <section data-include="home/lines"></section>
 
