--- a/liv/about/index.html
+++ b/liv/about/index.html
@@ -33,25 +33,23 @@ $(function () {
 
   <section data-include="home/landing"></section>
 
-  <section class="black">
-      <h1>
-          By levering state-of-the-art science and technology, our mission is to unlock the full human potential for each individual through health awareness and self-care.
-      </h1>
-      <!-- <h6>General</h6>
-      <p>‍This</p> -->
-  </section>
-
-  <div class="black">
-    <h2>
+<section class="black">
+      <h2>
         Mission
     </h2>
-</div>
-
-<section class="imagine">
-    <img class="imgfull" src="../media/img/bg/sun.webp">
-  
-    <p class="aboutme">We make health easy and accessible for all. we enable anyone, anywhere to assess their own health condition in real-time.</p>
+    <h1 style="padding-top: 3vh;">
+        By levering state-of-the-art science and technology, our mission is to unlock the full human potential for each individual through health awareness and self-care.
+    </h1>
+    <!-- <h6>General</h6>
+    <p>‍This</p> -->
 </section>
+
+<!-- <section class="imagine">  
+    <p class="aboutme">We are on a mission to democratize health, by taking medical technologies only available for a very limited number of people in the world and making it available for the masses.</p>
+
+    <img class="imgfull" src="../media/img/bg/sun.webp">
+
+</section> -->
 
   <section data-include="about/founders"></section>
 
