--- a/liv/cookies/index.html
+++ b/liv/cookies/index.html
@@ -32,16 +32,29 @@ $(function () {
 <div data-include="cookies"></div>
 <div data-include="header"></div>
 
-<section class="imagine">
-    <p style="font-size:1.5em; width: 100vw;">
-This website also includes certain components transmitted by Google Analytics, a web traffic analysis service provided by Google, Inc. ( "Google"). 
-Again it comes to third-party cookies collected and managed anonymously to monitor and improve the performance of the host site (cookies performance). 
-Google Analytics uses "cookies" to collect and analyze anonymous information about site usage behavior Liv (including your IP address). 
-This information is collected by Google Analytics, which processes them in order to draw up reports for the Liv operators about the activities on the websites themselves. 
-This site does not use (and do not allow others to use) the Google analytics tool to track or collect personally identifiable information. Google will not associate your IP address with any Other data held by Google or seek to link, an IP address with the identity of a user. 
-Google can also communicate this information to third parties unless required by law or where such third parties process the information on Google's behalf. 
-For more information, please see below given link: <a target="_blank" href="https://www.google.it/policies/privacy/partners/">https://www.google.it/policies/privacy/partners/</a> You can selectively disable the action of installing Google Analytics on your browser component opt-out provided by Google. 
-To disable the action of Google Analytics, please refer to the link given below: <a target="_blank" href="https://tools.google.com/dlpage/gaoptout">https://tools.google.com/dlpage/gaoptout</a>
+<section class="black" style="padding-top: 10vh;">
+    <h2>
+      Essentials
+    </h2>
+    <br>
+    <p>
+      This website includes Typeform Cookies. Typeform Cookies are only used in case of Requested Access to store your data for Typeform Forms. No personal informations are shared with other except Liv Aps and Typeform, as the service provider. <br><br>      
+      <a target="_blank" href="https://admin.typeform.com/to/dwk6gt/">Here</a> is reported the Typeform Cookies Policy<br><br>
+    </p>
+    <br>
+    <h2>
+      Statistics
+    </h2>
+    <br>
+    <p>
+      This website also includes certain components transmitted by Google Analytics, a web traffic analysis service provided by Google, Inc. ("Google"). 
+      Again it comes to third-party cookies collected and managed anonymously to monitor and improve the performance of the host site (cookies performance). 
+      Google Analytics uses "cookies" to collect and analyze anonymous information about site usage behavior Liv (including your IP address). 
+      This information is collected by Google Analytics, which processes them in order to draw up reports for the Liv operators about the activities on the websites themselves. 
+      This site does not use (and do not allow others to use) the Google analytics tool to track or collect personally identifiable information. Google will not associate your IP address with any Other data held by Google or seek to link, an IP address with the identity of a user. 
+      Google can also communicate this information to third parties unless required by law or where such third parties process the information on Google's behalf. 
+      For more information, please see below given link: <a target="_blank" href="https://www.google.it/policies/privacy/partners/">https://www.google.it/policies/privacy/partners/</a> You can selectively disable the action of installing Google Analytics on your browser component opt-out provided by Google. 
+      To disable the action of Google Analytics, please refer to the link given below: <a target="_blank" href="https://tools.google.com/dlpage/gaoptout">https://tools.google.com/dlpage/gaoptout</a>
     </p>
 </section>
 
