--- a/liv/home/index.html
+++ b/liv/home/index.html
@@ -80,6 +80,10 @@
             setVisible('.page', true);
             setVisible('#loading', false);
         }));
+
+        window.addEventListener('load', () => {
+            console.log("caricato");
+        });
     </script>
 
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
