--- a/liv/home/index.html
+++ b/liv/home/index.html
@@ -75,15 +75,17 @@
     setVisible('.page', false);
     setVisible('#loading', true);
 
-    document.addEventListener('DOMContentLoaded', () =>
-        wait(1000).then(() => {
-            setVisible('.page', true);
-            setVisible('#loading', false);
-        }));
+    // document.addEventListener('DOMContentLoaded', () =>
+    //     wait(1000).then(() => {
+    //         setVisible('.page', true);
+    //         setVisible('#loading', false);
+    //     }));
 
-        window.addEventListener('load', () => {
-            console.log("caricato");
-        });
+    window.addEventListener('load', () => {
+        setVisible('.page', true);
+        setVisible('#loading', false);
+    });
+
     </script>
 
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
