--- a/liv/about/index.html
+++ b/liv/about/index.html
@@ -31,7 +31,7 @@ $(function () {
   <div data-include="cookies"></div>
   <div data-include="header"></div>
 
-  <section data-include="home/landing"></section>
+  <section data-include="about/landing"></section>
 
 <section class="black">
       <h2>
